--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "postinstall": "npx prisma generate",
-    "build": "npx prisma generate && next build",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
     "dev": "next dev",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
