--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
-    "vercel-build": "npx prisma migrate deploy"
+    "vercel-build": "npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
